styles/styles.scss
.container {
  width: 60%;
  display: flex;
  margin: 80px auto;
  justify-content: center;
  font-family: Arial, Helvetica, sans-serif;

  .main-content {
    width: 60%;
    .image-slider {
      padding: 20px;
      color: #002b30;
      margin-bottom: 10px;
      border: 2px solid #cdd6d7;
      .display-with-controls {
        width: 100%;
        height: 300px;
        cursor: zoom-in;
        position: relative;
        border: 1px solid rgba(0, 0, 0, 0.07);
        background: linear-gradient(
          0.25turn,
          #d8d8d8,
          #fff,
          #fff,
          #fff,
          #fff,
          #fff,
          #d8d8d8
        );
        .display {
          width: 60%;
          height: 100%;
          margin: 0 auto;
          background-size: contain;
          background-position: center;
          background-repeat: no-repeat;
        }
        .controls {
          top: 45%;
          left: 10px;
          width: 100%;
          display: flex;
          cursor: zoom-in;
          position: absolute;
          justify-content: space-between;
          .img-right {
            img {
              width: 30px;
              padding: 5px;
              cursor: pointer;
              margin-right: 10px;
            }
          }
          .img-left {
            img {
              width: 30px;
              padding: 5px;
              cursor: pointer;
              margin-left: -10px;
            }
          }
        }
      }
      .view-finder {
        margin-top: 20px;
        padding-top: 20px;
        border-top: 2px solid #cdd6d7;
        .images {
          display: flex;
          flex-wrap: wrap;
          justify-content: center;
          .image-item-wrapper {
              min-width: 30%;
          }
          .image-item {
            margin: 5px;
            width: 100px;
            height: 100px;
            cursor: pointer;
            border-radius: 5px;
            background-size: contain;
            background-position: center;
            background-repeat: no-repeat;
            border: 1px solid #00000000;
            &.active {
              border-radius: 5px;
              border: 1px solid #1e5fee94;
              box-shadow: 0 0 2px 2px #1e5fee;
            }
          }
        }
      }
    }
    .img-popup {
      display: block;
      position: fixed;
      z-index: 4;
      padding-top: 100px;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      overflow: auto;
      background-color: rgb(0, 0, 0);
      background-color: rgba(0, 0, 0, 0.9);

      &-close-btn {
        top: 15px;
        right: 35px;
        font-size: 40px;
        cursor: pointer;
        color: #f1f1f1;
        transition: 0.3s;
        font-weight: bold;
        position: absolute;
        &:hover,
        &:focus {
          color: #bbb;
          text-decoration: none;
          cursor: pointer;
        }
      }
      &-container {
        &-img {
          background: url(../img/product1.jpg);
          width: 80%;
          margin: auto;
          height: 80vh;
          max-width: 700px;
          background-size: contain;
          background-position: center;
          background-repeat: no-repeat;

          -webkit-animation-name: zoom;
          -webkit-animation-duration: 0.6s;
          animation-name: zoom;
          animation-duration: 0.6s;
        }
        @-webkit-keyframes zoom {
          from {
            -webkit-transform: scale(0);
          }
          to {
            -webkit-transform: scale(1);
          }
        }

        @keyframes zoom {
          from {
            transform: scale(0.1);
          }
          to {
            transform: scale(1);
          }
        }
      }
    }
  }
  @media (max-width: 850px) {
    width: 80%;
  }

  @media (max-width: 600px) {
    width: 100%;
    margin-top: 20px;
    flex-direction: column;
    .main-content {
      width: 95%;
      margin: 0 auto;
      .image-slider .view-finder .images .image-item {
        width: 70px;
        height: 70px;
      }
      .img-popup {
          &-container-img {
            width: 90%;
          }
          &-close-btn {
            top: 8px;
            right: 20px;
          }
      }
    }
  }
  .hide {
    display: none !important;
  }
}

